Fix cookie close button not being visible

--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -11,6 +11,12 @@ html {
   list-style: none;
 }
 
+#header-cookie-notice {
+  .container {
+    width: auto;
+  }
+}
+
 #menu {
   p, .body-text {
     margin: 0;
